[ios] Synchronize tab grid page control with scroll view

Previously there was a bug where there was a mismatch of internal states
between the page control and the scroll view.
It is important that they both are synchronized with the same current
page.
This CL fixes the lack of synchronization.

TBR=marq@chromium.org
Bug: 825898

Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I284460d9581a05f780057ef53715484254978859
Reviewed-on: https://chromium-review.googlesource.com/981302
Commit-Queue: edchin <edchin@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545953}
Former-commit-id: b213eb0d4ad27dc3972762d8d07c881766b66638