ios/chrome/browser/ui/tab_grid/tab_grid_view_controller.mm
@@ -164,20 +164,21 @@ typedef NS_ENUM(NSUInteger, TabGridConfiguration) {
 
 - (void)scrollViewDidScroll:(UIScrollView*)scrollView {
   if (scrollView.dragging || scrollView.decelerating) {
+    // Only when user initiates scroll through dragging.
     CGFloat offsetWidth =
         self.scrollView.contentSize.width - self.scrollView.frame.size.width;
     CGFloat offset = scrollView.contentOffset.x / offsetWidth;
     self.topToolbar.pageControl.sliderPosition = offset;
+  }
 
-    // Bookkeeping for the current page.
-    // TODO(crbug.com/822328) : Fix for RTL.
-    CGFloat pageWidth = scrollView.frame.size.width;
-    float fractionalPage = scrollView.contentOffset.x / pageWidth;
-    NSUInteger page = lround(fractionalPage);
-    if (page != self.currentPage) {
-      _currentPage = static_cast<TabGridPage>(page);
-      [self configureButtonsForOriginalAndCurrentPage];
-    }
+  // Bookkeeping for the current page.
+  // TODO(crbug.com/822328) : Fix for RTL.
+  CGFloat pageWidth = scrollView.frame.size.width;
+  float fractionalPage = scrollView.contentOffset.x / pageWidth;
+  NSUInteger page = lround(fractionalPage);
+  if (page != self.currentPage) {
+    _currentPage = static_cast<TabGridPage>(page);
+    [self configureButtonsForOriginalAndCurrentPage];
   }
 }
 
@@ -279,7 +280,7 @@ typedef NS_ENUM(NSUInteger, TabGridConfiguration) {
     _currentPage = currentPage;
   } else {
     [self.scrollView setContentOffset:offset animated:YES];
-    // _currentPage is set in scrollViewDidEndDecelerating:
+    // _currentPage is set in scrollViewDidScroll:
   }
 }
 
